[package]
name = "es-htmlform"
version = "0.1.1"
authors = ["Guido Wesdorp <johnnydebris@gmail.com>"]
edition = "2018"

license = "Apache-2.0/MIT"

documentation = "https://docs.rs/es-htmlform/"
homepage = "https://github.com/johnnydebris/es-htmlform"
repository = "https://github.com/johnnydebris/es-htmlform"

description = "Library for building and validating HTML(5) forms."
keywords = ["html", "form", "validation"]
categories = ["web-programming"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
regex = "1"
hex = "0.4"
